--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
 
 @font-face {
   font-family: MoonieEyes;
-  src: url('../public/fonts/MoonieEyes.ttf') format('truetype');
+  src: url('../public/fonts/MoonieEyes.otf') format('truetype');
 }
 
 @font-face {
@@ -23,7 +23,7 @@ a {
 
 @layer base {
   html {
-    @apply  bg-custom-black text-custom-white font-primary;
+    @apply bg-main bg-cover bg-fixed bg-custom-black text-custom-white font-primary;
   }
 }
 
