--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,3 +30,12 @@ a {
 html {
   scroll-behavior: smooth;
 }
+
+@keyframes shimmer {
+  0% {
+    background-position: 0% 0%;
+  }
+  100% {
+    background-position: 200% 0%;
+  }
+}
